; ModuleID = '/home/carl/AnghaBench/mpv/audio/extr_chmap.c_mp_chmap_reorder_to_lavc.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/extr_chmap.c_mp_chmap_reorder_to_lavc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_chmap = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_chmap_reorder_to_lavc(%struct.mp_chmap* %0) #0 {
  %2 = alloca %struct.mp_chmap*, align 8
  %3 = alloca i32, align 4
  store %struct.mp_chmap* %0, %struct.mp_chmap** %2, align 8
  %4 = load %struct.mp_chmap*, %struct.mp_chmap** %2, align 8
  %5 = call i32 @mp_chmap_is_valid(%struct.mp_chmap* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %14

8:                                                ; preds = %1
  %9 = load %struct.mp_chmap*, %struct.mp_chmap** %2, align 8
  %10 = call i32 @mp_chmap_to_lavc_unchecked(%struct.mp_chmap* %9)
  store i32 %10, i32* %3, align 4
  %11 = load %struct.mp_chmap*, %struct.mp_chmap** %2, align 8
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @mp_chmap_from_lavc(%struct.mp_chmap* %11, i32 %12)
  br label %14

14:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @mp_chmap_is_valid(%struct.mp_chmap*) #1

declare dso_local i32 @mp_chmap_to_lavc_unchecked(%struct.mp_chmap*) #1

declare dso_local i32 @mp_chmap_from_lavc(%struct.mp_chmap*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
